# MosquittoMqttUtil

./: .gitignore  CMakeLists.txt  README.md
include/: mosquitto_mqtt_util.hpp
src/: main.cpp  main2.cpp  mosquitto_mqtt_util.cpp
